Mon Sep 21 17:24:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
        * DevGuideExamples/DCPS/Messenger/Subscriber.cpp:

          Updated include order (fixes issues on WinCE builds)

Fri Sep 18 19:29:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples

          DevGuideExamples updates.

Fri Sep 18 16:20:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.h:
        * DevGuideExamples/DCPS/Messenger/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListenerImpl.h:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/DataReaderListenerImpl.cpp:
        * java/idl2jni/codegen/im_java.cpp:

          Various scoreboard fixes.

Thu Sep 17 22:42:22 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/DCPS/CPPTemplate.pm:

          Fixed warning on VC9 builds. Apparently Windows does not think parens
          provide sufficient security when assigning within conditionals.

Thu Sep 17 22:20:54 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Serializer_wstring/publisher.cpp:
        * tests/DCPS/Serializer_wstring/subscriber.cpp:

          Fixes for WinCE builds.

Thu Sep 17 20:30:34 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples/DCPS/Messenger:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy:

          DevGuideExamples updates.

Thu Sep 17 19:55:16 UTC 2009  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/doc/tests:

          Updated config path info for running test.

        * performance-tests/Bench/tools/mkpkg:

          Changed to use version of ACE TAO besides 1.5a.

Thu Sep 17 15:48:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/im_java.cpp:

          Added guard around use of long long and unsigned long long as