@@ -1,3 +1,14 @@
+Mon Sep 21 22:01:47 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>
+
+        * performance-tests/Bench/src/Options.cpp:
+        * performance-tests/Bench/src/Process.cpp:
+        * performance-tests/Bench/src/Publication.cpp:
+        * performance-tests/Bench/src/Subscription.cpp:
+
+	  Trevor's updates to the framework - fixed problem with
+	  transport creation; allow operation without publications or
+	  subscriptions (both are no longer required).
+
 Mon Sep 21 17:24:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * DevGuideExamples/DCPS/Messenger/Publisher.cpp:
